--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="./contactus.css" />
     <script src="https://kit.fontawesome.com/c82ae6c195.js"crossorigin="anonymous"></script>
     <title>contactus</title>
+    <link rel="stylesheet" href="../global.css">
   </head>
   <body>
     <header>
       <h1 class="nav_left">SMART WASH</h1>
-      <a href="../home/Home.html" class="nav_right">HOME</a>
-      <a href="../aboutus/aboutus.html class="nav_right">ABOUT US</a>
+      <a href="../home/Home.html" class="nav_right ">HOME</a>
+      <a href="../aboutus/aboutus.html" class="nav_right active">ABOUT US</a>
       <a href="../service/service.html" class="nav_right">SERVICES</a>
       <a href="../contactus/contactus.html" class="nav_right">CONTACT US</a>
+      <a href="../login/login.html" class="nav_right">Login/Logout</a>
     </header>
 
     <div class="container">
-      <h2 class="title">CONTACT US</h2>
+      <img src="./download.png" alt="">
     </div>
 
     <div class="info">
