--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -5,62 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./contactus.css" />
-    <script src="https://kit.fontawesome.com/c82ae6c195.js"crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c82ae6c195.js"
+      crossorigin="anonymous"
+    ></script>
     <title>contactus</title>
-    <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="../global.css" />
   </head>
   <body>
     <header>
       <h1 class="nav_left">SMART WASH</h1>
-      <a href="../home/Home.html" class="nav_right ">HOME</a>
-      <a href="../aboutus/aboutus.html" class="nav_right active">ABOUT US</a>
+      <a href="../home/Home.html" class="nav_right">HOME</a>
+      <a href="../aboutus/aboutus.html" class="nav_right">ABOUT US</a>
       <a href="../service/service.html" class="nav_right">SERVICES</a>
-      <a href="../contactus/contactus.html" class="nav_right">CONTACT US</a>
+      <a href="../contactus/contactus.html" class="nav_right active"
+        >CONTACT US</a
+      >
       <a href="../login/login.html" class="nav_right">Login/Logout</a>
     </header>
 
     <div class="container">
-      <img src="./download.png" alt="">
-    </div>
-
-    <div class="info">
-      <div class="card">
-        <i class="card-icon fas fa-envelope"></i>
-        <p>smart_wash@gmail.com</p>
-      </div>
-
-      <div class="card">
-        <i class="card-icon fas fa-phone"></i>
-        <p>+82 0123 456 7890</p>
-      </div>
-
-      <div class="card">
-        <i class="card-icon fas fa-print"></i>
-        <p>123-123-1234</p>
-      </div>
+      <img src="./download.png" alt="" />
     </div>
 
     <div class="question">
-      <h3>HAVE SOME QUESTIONS?</h3>
-      <form class="form" action="contactus.html" method="POST">
-        <input type="text" class="text" placeholder="Enter your name" />
-        <input type="email" class="text" placeholder="Enter your email" />
-        <textarea class="text" placeholder="Enter your message"></textarea>
-        <input type="submit" class="text_btn" value="Send" />
+      <form>
+        <h1>HAVE SOME QUESTIONS?</h1>
+        <input type="email" placeholder="Enter your email" />
+        <input type="text" placeholder="Enter your name" />
+        <textarea
+          placeholder="Please enter your message."
+          id=""
+          cols="30"
+          rows="10"
+        ></textarea>
+        <button>Send</button>
       </form>
-      <div class="socials">
-        <a href="#"> <i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"> <i class="fa-brands fa-twitter"></i></a>
+      <div class="sns">
+        <img src="./icons/facebook.svg" alt="">
+        <img src="./icons/instagram.svg" alt="">
+        <img src="./icons/twitter.svg" alt="">
       </div>
     </div>
+
+    <footer>
+      <div class="foot">
+        <a href="/home/Home.html" class="footer_nav">HOME</a>
+        <a href="/aboutus/aboutus.html" class="footer_nav">ABOUT US</a>
+        <a href="/service/index.html" class="footer_nav">SERVICES</a>
+        <a href="/contactus/contactus.html" class="footer_nav">CONTACT US</a>
+      </div>
+    </footer>
   </body>
-  <footer>
-    <div class="foot">
-    <a href="/home/Home.html" class="footer_nav">HOME</a>
-    <a href="/aboutus/aboutus.html" class="footer_nav">ABOUT US</a>
-    <a href="/service/index.html" class="footer_nav">SERVICES</a>
-    <a href="/contactus/contactus.html" class="footer_nav">CONTACT US</a>
-   </div>
-</footer>
 </html>
